Solved navbar align right.

--- a/css/web.css
+++ b/css/web.css
@@ -1,10 +1,21 @@
 body {
+    margin: 0;
+    padding: 0;
     background-color: #2d3142;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-nav a {
+.navbar ul {
+    list-style: none;
+    text-align: right;
+}
+
+.navbar li {
+    display: inline-block;
+}
+
+.navbar a {
     text-decoration: none;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 1.1rem;
     font-weight: 500;
     color: #4f5d75;
@@ -14,12 +25,11 @@ nav a {
     margin: 5px 10px;
 }
 
-input {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+.navbar input {
     font-size: 1.1rem;
     font-weight: 500;
     color: #ef8354;
-    padding: 4px 20px;
+    padding: 4px 0px 4px 20px;
     border-radius: 0.8rem;
     margin: 5px 10px;
     border: none;
